# redshift-query-builder

./: README.md  pyproject.toml
src/redshift_query_builder/: __init__.py  core.py
tests/: test_both_forms.py  test_builder.py  test_builder_functionality.py  test_call_once.py  test_compression_validation.py  test_conflict_rules.py  test_decorator.py  test_validation_rules.py
