[project]
name = "redshift-query-builder"
dynamic = ["version"]
description = "A simple query builder for Redshift"
readme = "README.md"
authors = [
    { name = "Kit Lee", email = "7000003+wingkitlee0@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "^(?P<version>.*)$"
