[project]
name = "redshift-query-builder"
dynamic = ["version"]
description = "A simple query builder for Redshift"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kit Lee", email = "7000003+wingkitlee0@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "^(?P<version>.*)$"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
